Fixed forum on mobile devices

--- a/src/Styles/Forum.css
+++ b/src/Styles/Forum.css
@@ -167,7 +167,8 @@
     line-height: 1.3;
     margin: 0;
 }
-.Forum .Likes{
+.Forum .Likes,
+.Forum .Comments{
     display: flex;
     justify-content: flex-end;
 }
